TestHub-server/testhub-nsrule/nsrule-core/src/main/java/org/dromara/testhub/nsrule/core/executer/mode/base/formula/antlr/FormulaParser.java
// Generated from /Users/vinc/Documents/github/TestHub/server/testhub-nsrule/nsrule-core/antlr4/Formula.g4 by ANTLR 4.13.1
package org.dromara.testhub.nsrule.core.executer.mode.base.formula.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FormulaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, SingleQuoteAnyText=6, IN=7, NOT=8, 
		LIKE=9, RLIKE=10, EQ=11, NEQ=12, GT=13, LT=14, GE=15, LE=16, ADD=17, SUB=18, 
		MUL=19, DIV=20, PERCENTAGE=21, SPACE=22, SingleQuote=23, QUE_MARK=24, 
		SIGH=25, COMMA=26, DOT=27, DOLLAR=28, LCURLY=29, RCURLY=30, LBRACKET=31, 
		RBRACKET=32, INT=33, FLOAT=34, IDENTIFIER=35, CHINESE=36, WELL=37, AND=38, 
		SEMICOLON=39, AT=40, COLON=41, Whitespace=42;
	public static final int
		RULE_formula = 0, RULE_otherNode = 1, RULE_dataNode = 2, RULE_keyVal = 3, 
		RULE_keyFormula = 4, RULE_pathNode = 5, RULE_funcNode = 6, RULE_params = 7, 
		RULE_param = 8, RULE_jsonpath = 9, RULE_subscript = 10, RULE_dotIdentifier = 11, 
		RULE_all = 12, RULE_dotAll = 13, RULE_arraySubscript = 14, RULE_condition = 15, 
		RULE_notNull = 16, RULE_expression = 17, RULE_op = 18, RULE_strOp = 19, 
		RULE_arrayIndex = 20, RULE_listIndex = 21, RULE_numIndex = 22, RULE_interval = 23, 
		RULE_arrayInterval = 24, RULE_toInterval = 25, RULE_firstInterval = 26, 
		RULE_recursion = 27, RULE_function = 28, RULE_decimal = 29, RULE_arithmetic = 30, 
		RULE_binArithmetic = 31, RULE_addsub = 32, RULE_muldiv = 33, RULE_factor = 34, 
		RULE_space = 35, RULE_chineseString = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"formula", "otherNode", "dataNode", "keyVal", "keyFormula", "pathNode", 
			"funcNode", "params", "param", "jsonpath", "subscript", "dotIdentifier", 
			"all", "dotAll", "arraySubscript", "condition", "notNull", "expression", 
			"op", "strOp", "arrayIndex", "listIndex", "numIndex", "interval", "arrayInterval", 
			"toInterval", "firstInterval", "recursion", "function", "decimal", "arithmetic", 
			"binArithmetic", "addsub", "muldiv", "factor", "space", "chineseString"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'${'", "'%{'", "'()'", null, "'in'", "'not'", "'like'", 
			"'rlike'", "'='", "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "' '", "'''", "'?'", "'!'", "','", "'.'", "'$'", 
			"'{'", "'}'", "'['", "']'", null, null, null, null, "'#'", "'&'", "';'", 
			"'@'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "SingleQuoteAnyText", "IN", "NOT", 
			"LIKE", "RLIKE", "EQ", "NEQ", "GT", "LT", "GE", "LE", "ADD", "SUB", "MUL", 
			"DIV", "PERCENTAGE", "SPACE", "SingleQuote", "QUE_MARK", "SIGH", "COMMA", 
			"DOT", "DOLLAR", "LCURLY", "RCURLY", "LBRACKET", "RBRACKET", "INT", "FLOAT", 
			"IDENTIFIER", "CHINESE", "WELL", "AND", "SEMICOLON", "AT", "COLON", "Whitespace"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Formula.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FormulaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FormulaContext extends ParserRuleContext {
		public Token dataType;
		public FuncNodeContext funcNode() {
			return getRuleContext(FuncNodeContext.class,0);
		}
		public PathNodeContext pathNode() {
			return getRuleContext(PathNodeContext.class,0);
		}
		public DataNodeContext dataNode() {
			return getRuleContext(DataNodeContext.class,0);
		}
		public ArithmeticContext arithmetic() {
			return getRuleContext(ArithmeticContext.class,0);
		}
		public OtherNodeContext otherNode() {
			return getRuleContext(OtherNodeContext.class,0);
		}
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public TerminalNode IDENTIFIER() { return getToken(FormulaParser.IDENTIFIER, 0); }
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).enterFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).exitFormula(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormulaVisitor ) return ((FormulaVisitor<? extends T>)visitor).visitFormula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_formula);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(74);
				match(T__0);
				setState(75);
				((FormulaContext)_localctx).dataType = match(IDENTIFIER);
				setState(76);
				match(T__1);
				}
				break;
			}
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(79);
				funcNode();
				}
				break;
			case 2:
				{
				setState(80);
				pathNode();
				}
				break;
			case 3:
				{
				setState(81);
				dataNode();
				}
				break;
			case 4:
				{
				setState(82);
				arithmetic(0);
				}
				break;
			case 5:
				{
				setState(83);
				otherNode();
				}
				break;
			}
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(86);
					formula();
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OtherNodeContext extends ParserRuleContext {
		public List<TerminalNode> DIV() { return getTokens(FormulaParser.DIV); }
		public TerminalNode DIV(int i) {
			return getToken(FormulaParser.DIV, i);
		}
		public List<TerminalNode> WELL() { return getTokens(FormulaParser.WELL); }
		public TerminalNode WELL(int i) {
			return getToken(FormulaParser.WELL, i);
		}
		public List<TerminalNode> AND() { return getTokens(FormulaParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(FormulaParser.AND, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(FormulaParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(FormulaParser.SEMICOLON, i);
		}
		public List<TerminalNode> PERCENTAGE() { return getTokens(FormulaParser.PERCENTAGE); }
		public TerminalNode PERCENTAGE(int i) {
			return getToken(FormulaParser.PERCENTAGE, i);
		}
		public List<TerminalNode> AT() { return getTokens(FormulaParser.AT); }
		public TerminalNode AT(int i) {
			return getToken(FormulaParser.AT, i);
		}
		public List<TerminalNode> DOT() { return getTokens(FormulaParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(FormulaParser.DOT, i);
		}
		public List<TerminalNode> COLON() { return getTokens(FormulaParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(FormulaParser.COLON, i);
		}
		public List<TerminalNode> MUL() { return getTokens(FormulaParser.MUL); }
		public TerminalNode MUL(int i) {
			return getToken(FormulaParser.MUL, i);
		}
		public List<TerminalNode> QUE_MARK() { return getTokens(FormulaParser.QUE_MARK); }
		public TerminalNode QUE_MARK(int i) {
			return getToken(FormulaParser.QUE_MARK, i);
		}
		public List<TerminalNode> SIGH() { return getTokens(FormulaParser.SIGH); }
		public TerminalNode SIGH(int i) {
			return getToken(FormulaParser.SIGH, i);
		}
		public List<TerminalNode> SUB() { return getTokens(FormulaParser.SUB); }
		public TerminalNode SUB(int i) {
			return getToken(FormulaParser.SUB, i);
		}
		public List<TerminalNode> DOLLAR() { return getTokens(FormulaParser.DOLLAR); }
		public TerminalNode DOLLAR(int i) {
			return getToken(FormulaParser.DOLLAR, i);
		}
		public List<TerminalNode> SPACE() { return getTokens(FormulaParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(FormulaParser.SPACE, i);
		}
		public List<TerminalNode> EQ() { return getTokens(FormulaParser.EQ); }
		public TerminalNode EQ(int i) {
			return getToken(FormulaParser.EQ, i);
		}
		public OtherNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).enterOtherNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).exitOtherNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormulaVisitor ) return ((FormulaVisitor<? extends T>)visitor).visitOtherNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OtherNodeContext otherNode() throws RecognitionException {
		OtherNodeContext _localctx = new OtherNodeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_otherNode);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(93); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(92);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 4261068670976L) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(95); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataNodeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(FormulaParser.IDENTIFIER, 0); }
		public TerminalNode SingleQuoteAnyText() { return getToken(FormulaParser.SingleQuoteAnyText, 0); }
		public DecimalContext decimal() {
			return getRuleContext(DecimalContext.class,0);
		}
		public ChineseStringContext chineseString() {
			return getRuleContext(ChineseStringContext.class,0);
		}
		public TerminalNode LBRACKET() { return getToken(FormulaParser.LBRACKET, 0); }
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public TerminalNode RBRACKET() { return getToken(FormulaParser.RBRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(FormulaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FormulaParser.COMMA, i);
		}
		public TerminalNode LCURLY() { return getToken(FormulaParser.LCURLY, 0); }
		public List<KeyFormulaContext> keyFormula() {
			return getRuleContexts(KeyFormulaContext.class);
		}
		public KeyFormulaContext keyFormula(int i) {
			return getRuleContext(KeyFormulaContext.class,i);
		}
		public TerminalNode RCURLY() { return getToken(FormulaParser.RCURLY, 0); }
		public DataNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).enterDataNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).exitDataNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormulaVisitor ) return ((FormulaVisitor<? extends T>)visitor).visitDataNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataNodeContext dataNode() throws RecognitionException {
		DataNodeContext _localctx = new DataNodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dataNode);
		int _la;
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				match(IDENTIFIER);
				}
				break;
			case SingleQuoteAnyText:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				match(SingleQuoteAnyText);
				}
				break;
			case SUB:
			case INT:
			case FLOAT:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				decimal();
				}
				break;
			case CHINESE:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				chineseString();
				}
				break;
			case LBRACKET:
				enterOuterAlt(_localctx, 5);
				{
				setState(101);
				match(LBRACKET);
				setState(102);
				formula();
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(103);
					match(COMMA);
					setState(104);
					formula();
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(110);
				match(RBRACKET);
				}
				break;
			case LCURLY:
				enterOuterAlt(_localctx, 6);
				{
				setState(112);
				match(LCURLY);
				setState(113);
				keyFormula();
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(114);
					match(COMMA);
					setState(115);
					keyFormula();
					}
					}
					setState(120);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(121);
				match(RCURLY);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class KeyValContext extends ParserRuleContext {
		public Token key;
		public Token val;
		public TerminalNode COLON() { return getToken(FormulaParser.COLON, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(FormulaParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FormulaParser.IDENTIFIER, i);
		}
		public TerminalNode SingleQuoteAnyText() { return getToken(FormulaParser.SingleQuoteAnyText, 0); }
		public DecimalContext decimal() {
			return getRuleContext(DecimalContext.class,0);
		}
		public KeyValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyVal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).enterKeyVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).exitKeyVal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormulaVisitor ) return ((FormulaVisitor<? extends T>)visitor).visitKeyVal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KeyValContext keyVal() throws RecognitionException {
		KeyValContext _localctx = new KeyValContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_keyVal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			((KeyValContext)_localctx).key = match(IDENTIFIER);
			setState(126);
			match(COLON);
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				{
				setState(127);
				((KeyValContext)_localctx).val = match(IDENTIFIER);
				}
				break;
			case SingleQuoteAnyText:
				{
				setState(128);
				match(SingleQuoteAnyText);
				}
				break;
			case SUB:
			case INT:
			case FLOAT:
				{
				setState(129);
				decimal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class KeyFormulaContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(FormulaParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(FormulaParser.COLON, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public KeyFormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyFormula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).enterKeyFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).exitKeyFormula(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormulaVisitor ) return ((FormulaVisitor<? extends T>)visitor).visitKeyFormula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KeyFormulaContext keyFormula() throws RecognitionException {
		KeyFormulaContext _localctx = new KeyFormulaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_keyFormula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(IDENTIFIER);
			setState(133);
			match(COLON);
			setState(134);
			formula();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PathNodeContext extends ParserRuleContext {
		public JsonpathContext jsonpath() {
			return getRuleContext(JsonpathContext.class,0);
		}
		public TerminalNode RCURLY() { return getToken(FormulaParser.RCURLY, 0); }
		public PathNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pathNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).enterPathNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).exitPathNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormulaVisitor ) return ((FormulaVisitor<? extends T>)visitor).visitPathNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PathNodeContext pathNode() throws RecognitionException {
		PathNodeContext _localctx = new PathNodeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pathNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__2);
			setState(137);
			jsonpath();
			setState(138);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncNodeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(FormulaParser.IDENTIFIER, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode RCURLY() { return getToken(FormulaParser.RCURLY, 0); }
		public TerminalNode DOT() { return getToken(FormulaParser.DOT, 0); }
		public JsonpathContext jsonpath() {
			return getRuleContext(JsonpathContext.class,0);
		}
		public FuncNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).enterFuncNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).exitFuncNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormulaVisitor ) return ((FormulaVisitor<? extends T>)visitor).visitFuncNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncNodeContext funcNode() throws RecognitionException {
		FuncNodeContext _localctx = new FuncNodeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcNode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__3);
			setState(141);
			match(IDENTIFIER);
			setState(142);
			params();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(143);
				match(DOT);
				setState(144);
				jsonpath();
				}
			}

			setState(147);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FormulaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FormulaParser.COMMA, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormulaVisitor ) return ((FormulaVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_params);
		int _la;
		try {
			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				match(T__4);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				match(T__0);
				setState(151);
				param();
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(152);
					match(COMMA);
					setState(153);
					param();
					}
					}
					setState(158);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(159);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(FormulaParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(FormulaParser.COLON, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormulaListener ) ((FormulaListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormulaVisitor ) return ((FormulaVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}
